Update Last.fm auth implementation
